--- a/usr.bin/iscsictl/iscsictl.8
+++ b/usr.bin/iscsictl/iscsictl.8
@@ -36,10 +36,10 @@
 .Sh SYNOPSIS
 .Nm
 .Fl A
-.Fl p Ar portal Fl t Ar target Op Fl u Ar user Fl s Ar secret
+.Fl p Ar portal Fl t Ar target Op Fl u Ar user Fl s Ar secret Fl T Ar transport
 .Nm
 .Fl A
-.Fl d Ar discovery-host Op Fl u Ar user Fl s Ar secret
+.Fl d Ar discovery-host Op Fl u Ar user Fl s Ar secret Fl T Ar transport
 .Nm
 .Fl A
 .Fl a Op Fl c Ar path
@@ -109,6 +109,8 @@ Target portal - host name or address - for statically defined targets.
 CHAP secret.
 .It Fl t
 Target name.
+.It Fl T
+Transport type, can be iser or tcp (default: tcp).
 .It Fl u
 CHAP login.
 .It Fl v
